--- a/app/globals.css
+++ b/app/globals.css
@@ -10,24 +10,22 @@
   background-position: center;
 }
 .stand-out-bg {
-  background: url(../public/images/mobile/image-stand-out.jpg) no-repeat center;
+  background: url(/images/mobile/image-stand-out.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .transform-bg {
-  background: url(../public/images/mobile/image-transform.jpg) no-repeat center;
+  background: url(/images/mobile/image-transform.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .graphic-design-bg {
-  background: url(../public/images/mobile/image-graphic-design.jpg) no-repeat
-    center;
+  background: url(/images/mobile/image-graphic-design.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .photography-bg {
-  background: url(../public/images/mobile/image-photography.jpg) no-repeat
-    center;
+  background: url(/images/mobile/image-photography.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
