--- a/app/globals.css
+++ b/app/globals.css
@@ -5,27 +5,29 @@
 @tailwind utilities;
 
 .hero-bg {
-  background: url(/images/mobile/image-header.jpg) no-repeat center;
+  background: url(../public/images/mobile/image-header.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .stand-out-bg {
-  background: url(/images/mobile/image-stand-out.jpg) no-repeat center;
+  background: url(../public/images/mobile/image-stand-out.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .transform-bg {
-  background: url(/images/mobile/image-transform.jpg) no-repeat center;
+  background: url(../public/images/mobile/image-transform.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .graphic-design-bg {
-  background: url(/images/mobile/image-graphic-design.jpg) no-repeat center;
+  background: url(../public/images/mobile/image-graphic-design.jpg) no-repeat
+    center;
   background-size: cover;
   background-position: center;
 }
 .photography-bg {
-  background: url(/images/mobile/image-photography.jpg) no-repeat center;
+  background: url(../public/images/mobile/image-photography.jpg) no-repeat
+    center;
   background-size: cover;
   background-position: center;
 }
