--- a/app/globals.css
+++ b/app/globals.css
@@ -5,30 +5,34 @@
 @tailwind utilities;
 
 .hero-bg {
-  background: url(/fm-sunnyside-agency-landing-page/images/mobile/image-header.jpg)
-    no-repeat center;
+  /* Change to this url when deploying weird bug in NextJS. First time this
+   * happend */
+  /* background: url(/fm-sunnyside-agency-landing-page/images/mobile/image-header.jpg) */
+  /*   no-repeat center; */
+  /* This worked on last project  now it's broken */
+  /* background: url(../public/images/mobile/image-stand-out.jpg) no-repeat center; */
+
+  background: url(/images/mobile/image-header.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .stand-out-bg {
-  background: url(../public/images/mobile/image-stand-out.jpg) no-repeat center;
+  background: url(/images/mobile/image-stand-out.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .transform-bg {
-  background: url(../public/images/mobile/image-transform.jpg) no-repeat center;
+  background: url(/images/mobile/image-transform.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .graphic-design-bg {
-  background: url(../public/images/mobile/image-graphic-design.jpg) no-repeat
-    center;
+  background: url(/images/mobile/image-graphic-design.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .photography-bg {
-  background: url(../public/images/mobile/image-photography.jpg) no-repeat
-    center;
+  background: url(/images/mobile/image-photography.jpg) no-repeat center;
   background-size: cover;
   background-position: center;
 }
