--- a/app/globals.css
+++ b/app/globals.css
@@ -31,31 +31,31 @@
   /* This worked on last project  now it's broken */
   /* background: url(../public/images/mobile/image-stand-out.jpg) no-repeat center; */
 
-  background: url(/fm-sunnyside-agency/images/mobile/image-header.jpg) no-repeat
-    center;
+  background: url(/fm-sunnyside-agency-landing-page/images/mobile/image-header.jpg)
+    no-repeat center;
   background-size: cover;
   background-position: bottom;
 }
 .stand-out-bg {
-  background: url(/fm-sunnyside-agency/images/mobile/image-stand-out.jpg)
+  background: url(/fm-sunnyside-agency-landing-page/images/mobile/image-stand-out.jpg)
     no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .transform-bg {
-  background: url(/fm-sunnyside-agency/images/mobile/image-transform.jpg)
+  background: url(/fm-sunnyside-agency-landing-page/images/mobile/image-transform.jpg)
     no-repeat center;
   background-size: cover;
   background-position: center;
 }
 .graphic-design-bg {
-  background: url(/fm-sunnyside-agency/images/mobile/image-graphic-design.jpg)
+  background: url(/fm-sunnyside-agency-landing-page/images/mobile/image-graphic-design.jpg)
     no-repeat center;
   background-size: cover;
   background-position: top;
 }
 .photography-bg {
-  background: url(/fm-sunnyside-agency/images/mobile/image-photography.jpg)
+  background: url(/fm-sunnyside-agency-landing-page/images/mobile/image-photography.jpg)
     no-repeat center;
   background-size: cover;
   background-position: top;
@@ -64,36 +64,37 @@
   .hero-bg {
     /* Change to this url when deploying weird bug in NextJS. First time this
    * happend */
-    /* background: url(/fm-sunnyside-agency-landing-page/fm-sunnyside-agency/images/mobile/image-header.jpg) */
+    /* background: url(/fm-sunnyside-agency-landing-page-landing-page/fm-sunnyside-agency/images/mobile/image-header.jpg) */
     /*   no-repeat center; */
     /* This worked on last project  now it's broken */
-    /* background: url(../public/fm-sunnyside-agency/images/mobile/image-stand-out.jpg) no-repeat center; */
+    /* background: url(../public/fm-sunnyside-agency-landing-page/images/mobile/image-stand-out.jpg) no-repeat center; */
 
     background: #3dbeff
-      url(/fm-sunnyside-agency/images/desktop/image-header.jpg) no-repeat center;
+      url(/fm-sunnyside-agency-landing-page/images/desktop/image-header.jpg)
+      no-repeat center;
     background-size: contain;
     background-position: bottom;
   }
   .stand-out-bg {
-    background: url(/fm-sunnyside-agency/images/desktop/image-stand-out.jpg)
+    background: url(/fm-sunnyside-agency-landing-page/images/desktop/image-stand-out.jpg)
       no-repeat center;
     background-size: cover;
     background-position: center;
   }
   .transform-bg {
-    background: url(/fm-sunnyside-agency/images/desktop/image-transform.jpg)
+    background: url(/fm-sunnyside-agency-landing-page/images/desktop/image-transform.jpg)
       no-repeat center;
     background-size: cover;
     background-position: center;
   }
   .graphic-design-bg {
-    background: url(/fm-sunnyside-agency/images/desktop/image-graphic-design.jpg)
+    background: url(/fm-sunnyside-agency-landing-page/images/desktop/image-graphic-design.jpg)
       no-repeat center;
     background-size: cover;
     background-position: top;
   }
   .photography-bg {
-    background: url(/fm-sunnyside-agency/images/desktop/image-photography.jpg)
+    background: url(/fm-sunnyside-agency-landing-page/images/desktop/image-photography.jpg)
       no-repeat center;
     background-size: cover;
     background-position: top;
